--- a/components/sidebar.html
+++ b/components/sidebar.html
@@ -18,7 +18,7 @@
             
             <ul class="submenu">
                 <li><a href="log.html">Log</a></li>
-                <li><a href="Music.html">Music</a></li>
+                <li><a href="music.html">Music</a></li>
                 <li><a href="aquariums.html">Aquariums</a></li>
             </ul>
         </li>
