サイドバーの構造を更新

--- a/components/sidebar.html
+++ b/components/sidebar.html
@@ -1,14 +1,14 @@
 <nav class="sidebar">
     <div class="brand">
-        <a href="Home.html" class="brand-link">
+        <a href="home.html" class="brand-link">
         <h1>水槽の中の、</h1>
         <span>PERSONAL ARCHIVE</span>
     </div>
 
     <ul class="nav-menu">
         <li class="nav-item">
-            <a href="Home.html" class="nav-link">
-                <span class="nav-text">Home</span>
+            <a href="home.html" class="nav-link">
+                <span class="nav-text">home</span>
             </a>
         <li class="nav-item has-submenu">
             <a href="#" class="nav-link parent-link">
